
####   Don't forget to change the version number in configure.ac!   ####

04 Jan 2006 Change semigraphical panel START and STOP buttons to issue
            startall and sopall, respectively - Jay Maynard
04 Jan 2006 Fix cckd_gc_l2 bug - Greg Smith
04 Jan 2006 Correct bit codes returned in query function with no MSA ext 1 - Bernard
01 Jan 2006 CPU Timer rework - Jan Jaeger
31 Dec 2005 SET_THREAD_NAME for easier MSVC debugging - Fish
31 Dec 2005 Fix for Windows ..\relative path dasd files - Fish
31 Dec 2005 Add space as valid volser char, remove owner field check - Fish
29 Dec 2005 Fix bug causing semigraphical panel to always devinit the first
            device, regardless of what device was specified - Jay Maynard
29 Dec 2005 Add confirmations to semigraphical panel EXT and RST (external
            interrupt and restart) commands - Jay Maynard
29 Dec 2005 Fix bug in update_tod_clock preventing cpt from updating - Fish
29 Dec 2005 Fix cpustate display glitch in ipending command - Fish
29 Dec 2005 SIE XC interception fixes - Jan Jaeger
29 Dec 2005 Performance patch STCM, STCMY, STCMH - Bernard van der Helm
29 Dec 2005 Performance patch ICM, ICMY, ICMH - Bernard van der Helm
28 Dec 2005 Perform Timing Facility Function - Jan Jaeger / Bernard van der Helm
27 Dec 2005 Performance patch TM, TMH, TML, TMHH, TMHL, TMY - Bernard van der Helm
24 Dec 2005 Add IFL SCPINFO support for zLinux zipl code - Jan Jaeger
23 Dec 2005 Fix for Windows ..\relative path shadow files - Fish
11 Dec 2005 Correction to format 1 STIDP - Jan Jaeger
10 Dec 2005 Update FAQ software prerequisite sections - Roger Bowler
09 Dec 2005 MAX_CPU_ENGINES defaults to 8 for MSVC build too - Ivan Warren
08 Dec 2005 MAX_CPU_ENGINES now defaults to 8 instead of 2 - Greg Smith
06 Dec 2005 Accept ALRF as abbreviation for ASN_AND_LX_REUSE - Roger Bowler
06 Dec 2005 Fix leapyear issue in sysepoch and format_tod - Jan Jaeger
06 Dec 2005 More logmsg cleanup - Ivan Warren